2011-09-18  Ramon Casero  <ramon.casero@cs.ox.ac.uk>

	* ThirdPartyToolbox/TiffreadToolbox/image_background.m:
	* ThirdPartyToolbox/TiffreadToolbox/image_histogram.m:
	* ThirdPartyToolbox/TiffreadToolbox/show_image.m:
	* ThirdPartyToolbox/TiffreadToolbox/show_stack.m:
	* ThirdPartyToolbox/TiffreadToolbox/tiffread.m:

	- Minor edits to the helper headers so that we get a summary in
	README when running update_README.sh.

	* update_README.sh (v0.1.2):

	- Read also toolbox directories within toolbox directory.

	- Remove "./" at the beginning of toolbox name, but don't remove
	any other "/" symbols.

	* Add ThirdPartyToolbox/TiffreadToolbox (v2.7) directory, with files

	image_background.m
	image_histogram.m
	show_image.m
	show_stack.m
	tiffread.m

	Downloaded from

	http://www.cytosim.org/other/

	Licence GPL v3.

	* FileFormatToolbox/scinrrd_im2nrrd.m (v0.1.0):

	- Correct version number.

	- Add properties svn:eol-style native, svn:keywords Rev, Date.

	* Add FileFormatToolbox/scinrrd_tiff2nrrd.m (v0.1.0):

	- Create SCI NRRD struct from TIFF stack.

2011-09-14  Ramon Casero  <ramon.casero@cs.ox.ac.uk>

	* PointsToolbox/bwmesh.m (v0.1.2):

	- Invert order in which nrrdaxis is filled, to avoid reallocating
	memory at every step.

	* FiltersToolbox/scinrrd_seg2label_stats.m (v0.8.5):

	- Change output STATS.CylDivergence. Now we give the standard
	deviation of the distance between the each branch surface point,
	and the corresponding point on the surface of the estimated
	cylinder.

	- Fix bug. Make sure that the list of branch voxels is a column
	vector.

2011-09-09  Ramon Casero  <ramon.casero@cs.ox.ac.uk>

	* FiltersToolbox/scinrrd_skeleton_prune.m:

	- (v0.4.0) Removing clumps of bifurcation voxels was wrong,
	because in some cases it disconnected branches. Instead, what we
	are doing now is going to each bifurcation clump, getting the
	neighbouring branches, and keeping only the bifurcation voxels